--- a/manifest/api-svc.yaml
+++ b/manifest/api-svc.yaml
@@ -1,12 +1,12 @@
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
-  name: v1alpha1.acme.yourcompany.com
+  name: v1alpha1.example.com
   namespace: cert-manager
   labels:
     app: externaldns-webhook
   annotations:
-    cert-manager.io/inject-ca-from: "cert-manager/externaldns-webhook-webhook-tls"
+    cert-manager.io/inject-ca-from: "cert-manager/externaldns-webhook-tls"
 spec:
   group: example.com
   groupPriorityMinimum: 1000
